Expose encrypted_only attribute on VDA supported profiles.

This allows us to reduce video playback startup for software codecs
from ~50-300ms (N5..Android One) to ~microseconds.

BUG=596236
CQ_INCLUDE_TRYBOTS=tryserver.chromium.win:win_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel

Review URL: https://codereview.chromium.org/1820553002

Cr-Commit-Position: refs/heads/master@{#382185}

Former-commit-id: 4708098a8d03f9d0e7b5e6931f9c52c092e78fa9