media/video/video_decode_accelerator.h
@@ -33,6 +33,7 @@ class MEDIA_EXPORT VideoDecodeAccelerator {
     VideoCodecProfile profile;
     gfx::Size max_resolution;
     gfx::Size min_resolution;
+    bool encrypted_only;
   };
   using SupportedProfiles = std::vector<SupportedProfile>;
 
